tests/ui/extern/extern-type-diag-not-similar.stderr
error[E0277]: `Foo` cannot be sent between threads safely
  --> $DIR/extern-type-diag-not-similar.rs:23:19
   |
LL |     assert_send::<Foo>()
   |                   ^^^ `Foo` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `Foo`
note: required by a bound in `assert_send`
  --> $DIR/extern-type-diag-not-similar.rs:20:19
   |
LL | fn assert_send<T: Send + PointeeSized>() {}
   |                   ^^^^ required by this bound in `assert_send`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
